--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
   "dependencies": {
     "body-parser": "~1.0.0",
     "cheerio": "^0.16.0",
-    "cookie-parser": "~1.0.1",
+    "connect": "^2.18.0",
+    "cookie-parser": "^1.0.1",
     "debug": "~0.7.4",
     "express": "~4.2.0",
+    "express-session": "^1.2.1",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "nodemailer": "0.3.x",
     "pg": "^3.2.0",
     "request": "^2.36.0",
     "static-favicon": "~1.0.0",
     "strftime": "^0.8.0",
-    "url": "^0.10.1",
-    "nodemailer": "0.3.x"
+    "url": "^0.10.1"
   }
 }
