--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "static-favicon": "~1.0.0",
     "strftime": "^0.8.0",
     "url": "^0.10.1",
+    "everyauth": "0.4.5", 
     "nodemailer": "0.3.x"
   }
 }
