--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "0.3.x",
     "pg": "^3.2.0",
     "request": "^2.36.0",
+    "sequelize": "^1.7.5",
     "static-favicon": "~1.0.0",
     "strftime": "^0.8.0",
     "url": "^0.10.1"
